# absolut

./: Cargo.toml  LICENSE  README.md
absolut-core/: Cargo.toml
absolut-core/src/: lib.rs
absolut-derive/: Cargo.toml
absolut-derive/src/: lib.rs
crates/absolut/: Cargo.toml  README.md
crates/absolut-macros/: Cargo.toml
crates/absolut-macros/src/: driver.rs  lib.rs
crates/absolut-macros/src/algorithms/: composite.rs  general.rs  mod.rs  one_cold.rs  one_hot.rs  one_hot_sat.rs  one_of_8.rs  solver.rs
crates/absolut/src/: lib.rs
crates/absolut/tests/: test_algorithms.rs
salut-core/: Cargo.toml
salut-core/src/: lib.rs
salut-derive/: Cargo.toml
salut-derive/src/: lib.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
