[package]
name = "absolut-macros"
description = "Implementation details of absolut"
version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
syn = { version = "2.0.26", features = ["full"] }
quote = "1.0.31"
varisat = { version = "0.2.2", optional = true }

[features]
default = ["sat"]
sat = ["dep:varisat"]
